# Teste_Jules_Painel_Ger

./: .gitignore  app.py  contrato.py  requirements.txt  secrets.toml  test_app.py
observability_dashboard/: README.md
observability_dashboard/backend/: README.md  alembic.ini  pyproject.toml
observability_dashboard/backend/alembic/: README
observability_dashboard/backend/app/: main.py
observability_dashboard/backend/app/api/v1/endpoints/: dags.py  data_quality.py  jobs.py
observability_dashboard/backend/app/core/: config.py
observability_dashboard/backend/app/db/: models.py  session.py
observability_dashboard/backend/app/schemas/: __init__.py
observability_dashboard/backend/app/services/: airflow_service.py  data_quality_service.py
observability_dashboard/backend/tests/: __init__.py
observability_dashboard/frontend/: streamlit_app.py
